[tool.poetry]
name = "omegat-guides"
version = "0.1.0"
description = ""
authors = ["Manuel Souto Pico <m.soutopico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocs-macros-plugin = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
